# swt-bench

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  collect_changes.py  convert_aegis.py  pyproject.toml  report.py
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: build.yml  deploy-pages.yml
dataset/: count_lines_files.py  determine_filter.py  filter_cases.txt  filter_cases_full.txt  filter_cases_verified.txt  libro.py  swe_bench_contamination.py  swt_bench.py  swt_bench_cross_validation.py
docs/: .gitignore  CNAME  README.md  approaches.csv  generate_index.py  index.html  index.template.html  models.csv  orgs.csv  providers.csv  runs.csv
docs/static/: cite.bib
docs/static/css/: chatprotect.css
docs/static/js/: swtbench.js
figures/: .gitignore  ablation_calls.py  ablation_confidence.py  ablation_libro_samples.py  ablation_temperature.py  cost_estimate_inference.py  coverlines.py  cross_result_swt_swe.py  determine_filter.py  figure1.py  figure5.py  figure6.py  no_line_cov_gold.py  overlap_solved.py  resolved_before_cutoff.py  resolved_before_cutoff_lite.py  table1.py  table2.py  table2_bootstrapped.py  table3.py  table4.py  table5.py  table6.py  time_estimate_inference.py  util.py  venn_methods.py  zsp_swe-lite_bm25_gpt4.json
src/: __init__.py  constants.py  dataset.py  docker_build.py  docker_utils.py  dockerfiles.py  dump_to_json.py  exec_spec.py  grading.py  log_parsers.py  main.py  prepare_images.py  report.py  run_evaluation.py  test_spec.py  utils.py
src/auxillary_src/: extract_patches.py  requirements_extraction.txt  trace.py
tests/: test_extract_patches.py  test_log_parsers.py
tests/test_trace/: foo.py  foo_multiprocess.py  foo_subprocess.py  test_trace.py
web/: .gitignore  index.html
web/static/css/: chatprotect.css
web/static/js/: swtbench.js
