[build-system]
requires = ["setuptools>=69.2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "SWT-Bench"
version = "1.0.1"
authors = [
    {name="Mark Mueller", email="mark@logicstar.ai"},
    {name="Niels Mündler", email="niels.muendler@inf.ethz.ch"},
]
requires-python = ">=3.9"
license = { "text" = "MIT" }
dependencies = [
    "requests",
    'datasets',
    'docker',
    "unidiff",
    'python-dotenv',
    'tqdm',
    'fire',
    'editdistance',
    'GitPython',
]

[project.optional-dependencies]
develop = ["pre-commit"]
testing = ["pytest", "pytest-cov", "pytest-xdist"]
figures = ["tiktoken", "numpy", "tabulate", "venny4py", "nltk"]
